--- a/contatos/templates/contatos/index.html
+++ b/contatos/templates/contatos/index.html
@@ -1,8 +1,8 @@
 {% extends 'base.html' %}
 
 {%block conteudo%}
-<h1 class="mt-5">Minha agenda</h1>
 
+<h1 class="mt-5"></h1>
 <table class="table">
     <thead>
         <tr>
@@ -25,6 +25,7 @@
         {%endfor%}
     </tbody>
 </table>
+
 
 
 {%endblock%}
