--- a/contatos/templates/contatos/index.html
+++ b/contatos/templates/contatos/index.html
@@ -14,6 +14,7 @@
     </thead>
     <tbody>
         {% for contato in contatos %}
+        {%if contato.mostrar %}
         <tr>
             <td>
                 <a href="{% url 'ver_contato' contato.id %}"> {{contato.nome}}</a>
@@ -22,7 +23,8 @@
             <td>{{contato.telefone}}</td>
             <td>{{contato.categoria}}</td>
         </tr>
-        {%endfor%}
+        {% endif %}
+        {% endfor %}
     </tbody>
 </table>
 
