--- a/contatos/templates/contatos/index.html
+++ b/contatos/templates/contatos/index.html
@@ -30,7 +30,7 @@
 
 <nav aria-label="Page navigation example">
     <ul class="pagination">
-        {% for pagina in contatos.paginator_range %}
+        {% for pagina in contatos.paginator.page_range %}
         {% if contatos.number == pagina %}
         <li class="page-item active">
             <a class="page-link" href="?p={{ pagina }}">{{pagina}}</a>
